overflow on mobile fixed

--- a/react-app/src/components/Atoms/Quote/Quote.module.css
+++ b/react-app/src/components/Atoms/Quote/Quote.module.css
@@ -4,4 +4,5 @@
   width: 100%;
   max-height: 80px;
   padding: 0 20px;
+  max-width: 90vw;
 }
