--- a/react-app/src/components/User/User.css
+++ b/react-app/src/components/User/User.css
@@ -169,18 +169,3 @@ hr {
   width: 75%;
 }
 
-
-
-
-
-/* .user_container-header-right-links {
-  text-align: center;
-} */
-
-/* #links {
-  display: flex;
-  flex-direction: column;
-  height: 270px;
-  overflow-y: scroll;
-  width: 190px;
-} */
